0.13
 - New API: DynamoDB Streams
 - New API: DeviceFarm

0.12 09 Jul 2015
 - New API: CodePipeline
 - New API: CodeCommit
 - EC2 API update: copy encrypted snapshots between regions
 - SES API update: support for Sending Authorization
 - ECS API update
 - IAM update: support for SSH Keys
 - Autoscaling update: Support for scaling policies with steps
 - Fix DeleteMessageBatch,SendMessageBatch and ChangeMessageVisibilityBatch (thanks mbartold)

0.11 02 Jul 2015 
 - Bump up verion in response to: #105600: Please don't let your version length decrease (mst)

0.10 01 Jul 2015 
 - Don't dump request in EC2 Caller
 - Paws::Net::Caller was not correctly handling cases where the API only returns success (1) (osoriano)
 - Tests don't use Data::Path anymore (using own "mini-implementation")

0.09 25 Jun 2015 17:00:00
 - API updates from botocore until 2015-06-29
 - Difference between SQS message AttributeMaps and QueueAttribute maps (thnks codehead) 
 - Paws now returns structured exceptions (Paws::Exception) with information of errors from
   the APIs. The exceptions stringify so you don't have to worry about too much breakage. If you
   were parsing the error message from the exception, you should now use Paws::Exceptions accessors
   to get the already parsed information
 - Refactoring in the different callers to move functionalities only where needed
 - Endpoint resolution support (first version by Iñigo Tejedor)
 - SQS Maps are now working correctly (QueueMaps were ill defined). Thanks to codehead
 - Fix bug for JSONCaller: when response doesn't have a body, the operation would succeed, but an
   invalid json string exception was thrown
 - longs changed to Moose type Int, instead of Num (longs are 64 bit integers 
   in Java https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html)
   Those Ints are passed to AWS as int() instead of Strings, because AWS APIs (CloudWatchLogs
   for example) isn't able to transform String to long (we get an API error)